Add Font Awesome, social media icon sprites, and a better sample page

--- a/assets/stylesheets/app/application.less
+++ b/assets/stylesheets/app/application.less
@@ -1,7 +1,9 @@
 @import "bootstrap";
+@import "../vendor/font-awesome/font-awesome";
 
 body {
   padding: 60px 0 40px;
 }
 
 @import "responsive";
+@import "../lib/vamp/sprites";
