Sprite ALL the things

--- a/assets/stylesheets/app/application.less
+++ b/assets/stylesheets/app/application.less
@@ -1,5 +1,9 @@
+@iconSpritePath:      "/assets/images/icons/glyphicons-halflings.png";
+@iconWhiteSpritePath: "/assets/images/icons/glyphicons-halflings-white.png";
+
+
 @import "bootstrap";
-@import "../vendor/font-awesome/font-awesome";
+/*@import "../vendor/font-awesome/font-awesome";*/
 
 body {
   padding: 60px 0 40px;
