Abstract bootstrap imports and allow for variable overrides

--- a/assets/stylesheets/app/client.less
+++ b/assets/stylesheets/app/client.less
@@ -1,4 +1,5 @@
-@import "../vendor/bootstrap/bootstrap";
+@import "client/variables";
+@import "client/bootstrap";
 @import "../vendor/font-awesome/font-awesome";
 @import "../vendor/fancybox/jquery.fancybox-buttons";
 @import "../vendor/fancybox/jquery.fancybox-thumbs";
