Rename client files/directories to application

--- a/assets/stylesheets/app/application.less
+++ b/assets/stylesheets/app/application.less
@@ -1,9 +1,9 @@
-@import "client/variables";
-@import "client/bootstrap";
+@import "application/variables";
+@import "application/bootstrap";
 @import "../vendor/font-awesome/font-awesome";
 @import "../vendor/fancybox/jquery.fancybox-buttons";
 @import "../vendor/fancybox/jquery.fancybox-thumbs";
 @import "../vendor/fancybox/jquery.fancybox";
 @import "../lib/retina";
 @import "../lib/sprites";
-@import "client/screen";
+@import "application/screen";
