--- a/assets/stylesheets/app/application.less
+++ b/assets/stylesheets/app/application.less
@@ -1,5 +1,36 @@
-@import "application/variables";
-@import "application/bootstrap";
+@import "../vendor/bootstrap/reset.less";
+@import "../vendor/bootstrap/variables.less";
+@import "../vendor/bootstrap/mixins.less";
+@import "../vendor/bootstrap/scaffolding.less";
+@import "../vendor/bootstrap/grid.less";
+@import "../vendor/bootstrap/layouts.less";
+@import "../vendor/bootstrap/type.less";
+@import "../vendor/bootstrap/code.less";
+@import "../vendor/bootstrap/forms.less";
+@import "../vendor/bootstrap/tables.less";
+@import "../vendor/bootstrap/sprites.less";
+@import "../vendor/bootstrap/dropdowns.less";
+@import "../vendor/bootstrap/wells.less";
+@import "../vendor/bootstrap/component-animations.less";
+@import "../vendor/bootstrap/close.less";
+@import "../vendor/bootstrap/buttons.less";
+@import "../vendor/bootstrap/button-groups.less";
+@import "../vendor/bootstrap/alerts.less";
+@import "../vendor/bootstrap/navs.less";
+@import "../vendor/bootstrap/navbar.less";
+@import "../vendor/bootstrap/breadcrumbs.less";
+@import "../vendor/bootstrap/pagination.less";
+@import "../vendor/bootstrap/pager.less";
+@import "../vendor/bootstrap/modals.less";
+@import "../vendor/bootstrap/tooltip.less";
+@import "../vendor/bootstrap/popovers.less";
+@import "../vendor/bootstrap/thumbnails.less";
+@import "../vendor/bootstrap/labels-badges.less";
+@import "../vendor/bootstrap/progress-bars.less";
+@import "../vendor/bootstrap/accordion.less";
+@import "../vendor/bootstrap/carousel.less";
+@import "../vendor/bootstrap/hero-unit.less";
+@import "../vendor/bootstrap/utilities.less";
 @import "../vendor/font-awesome/font-awesome";
 @import "../vendor/fancybox/jquery.fancybox-buttons";
 @import "../vendor/fancybox/jquery.fancybox-thumbs";
