Comment out retina.less for use with less.js

--- a/assets/stylesheets/app/application.less
+++ b/assets/stylesheets/app/application.less
@@ -1,5 +1,7 @@
 @import "../vendor/bootstrap/bootstrap";
 @import "../vendor/bootstrap/responsive";
-@import "../lib/retina";
+// retina.less doesn't work with less.js
+// @import "../lib/retina";
 @import "application/variables";
 @import "application/screen";
+
